--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,14 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@verstappencodes/medium": "^1.0.2",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "hono": "^4.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "prisma": "^6.14.0",
     "wrangler": "^4.4.0"
   }
