--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -33,3 +33,8 @@ lerna-debug.log*
 .DS_Store
 
 /src/generated/prisma
+
+# Wrangler config files that may contain secrets
+wrangler.toml
+*.wrangler.toml
+wrangler.jsonc
